--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
